// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentContributors caption snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-6582y1-ComponentContributors"
  >
    <div
      class="css-1nwo78o-ComponentContributors"
    >
      contributors
    </div>
    <div
      aria-label="avatars of martin-stoyanov, atanasster"
      class="css-1yvvfp0-GithubAvatarList"
    >
      <div
        class="css-dam4fv-GithubAvatar"
        style="display: inline-block;"
      >
        <div
          class="css-1en2h0i-GithubAvatar"
        >
          <img
            alt="avatar of martin-stoyanov"
            class="css-1y16e88"
            height="24"
            src="https://github.com/martin-stoyanov"
            title="martin-stoyanov"
            width="24"
          />
        </div>
      </div>
      <div
        class="css-9cbusc-GithubAvatar"
        style="display: inline-block;"
      >
        <div
          class="css-1en2h0i-GithubAvatar"
        >
          <img
            alt="avatar of atanasster"
            class="css-1y16e88"
            height="24"
            src="https://github.com/atanasster"
            title="atanasster"
            width="24"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentContributors overview snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-6582y1-ComponentContributors"
  >
    <div
      aria-label="avatars of martin-stoyanov, atanasster"
      class="css-1yvvfp0-GithubAvatarList"
    >
      <div
        class="css-dam4fv-GithubAvatar"
        style="display: inline-block;"
      >
        <div
          class="css-1en2h0i-GithubAvatar"
        >
          <img
            alt="avatar of martin-stoyanov"
            class="css-1y16e88"
            height="24"
            src="https://github.com/martin-stoyanov"
            title="martin-stoyanov"
            width="24"
          />
        </div>
      </div>
      <div
        class="css-9cbusc-GithubAvatar"
        style="display: inline-block;"
      >
        <div
          class="css-1en2h0i-GithubAvatar"
        >
          <img
            alt="avatar of atanasster"
            class="css-1y16e88"
            height="24"
            src="https://github.com/atanasster"
            title="atanasster"
            width="24"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
